first vertion of profile controller

--- a/app/views/partials/profile.html
+++ b/app/views/partials/profile.html
@@ -2,36 +2,26 @@
 	$ PROFILE
 ********************************************************************* -->
 <section class="profile">
-	<div class="profile__info">
-		<!-- <div class="profile"> -->
-				<div class="profile__avatar">
-					<!-- <img src="{{ profile.photo }}"> -->
-					<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_150/v1430433775/artjam_pokjgd.png">
-				</div>
-				<div class="profile__data">
-					<div class="profile__name">
-						<p class="profile-text">{{ profile.firstname }} {{ profile.lastname }}</p>
-					</div>
-					<div class="profile__info">
-						<div class="profile__city">
-							<p class="skinny-text" data-color='light'><i class="fa fa-map-marker"></i> {{ profile.city }}</p>
-						</div>
-						<div class="profile__follow">
-
-							{% if profile.following %}
-								<button class="button-liner disabled js-followButton" data-size="small" data-following="true" data-userId="{{ profile.id }}">
-							{% else %}
-								<button class="button-liner js-followButton" data-size="small" data-following="false" data-userId="{{ profile.id }}">
-							{% endif %}
-									<span class="button-liner__action folllow">Seguir</span>
-									<span class="button-liner__action following"><i class="fa fa-check"></i> Siguiendo</span>
-									<span class="button-liner__action cancel"><i class="fa fa-times-circle"></i> Cancelar</span>
-									<span class="button-liner__number">{{ data[5].followers }}</span>
-								</button>
-						</div>
-					</div>
-				</div>
-		<!-- </div> -->
+	<div class="profile__information">
+		<div class="profile__avatar">
+			<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_150/v1430433775/artjam_pokjgd.png">
+		</div>
+		<div class="profile__data">
+			<p class="profile-text">{{ profile.firstname }} {{ profile.lastname }}</p>
+			<div class="profile__info">
+				<p class="skinny-text" data-color='light'><i class="fa fa-map-marker"></i> Lima</p>
+				{% if profile.following %}
+					<button class="button-liner disabled js-followButton" data-size="small" data-following="true" data-userId="{{ profile.id }}">
+				{% else %}
+					<button class="button-liner js-followButton" data-size="small" data-following="false" data-userId="{{ profile.id }}">
+				{% endif %}
+						<span class="button-liner__action folllow">Seguir</span>
+						<span class="button-liner__action following"><i class="fa fa-check"></i> Siguiendo</span>
+						<span class="button-liner__action cancel"><i class="fa fa-times-circle"></i> Cancelar</span>
+						<span class="button-liner__number">{{ data[5].followers }}</span>
+					</button>
+			</div>
+		</div>
 	</div>
 	<div class="profile__menu">
 		<div class="square-menu-container">	
@@ -45,6 +35,16 @@
 		</div>
 	</div>
 	<div class="profile__elements">
-		
+		<div class="profile__element">
+			<!-- Portafolio -->
+			{% include '../partials/works.html' %}
+		</div>
+		<div class="profile__element">
+			<!-- Tienda -->
+			{% include '../partials/products.html' %}
+		</div>
+		<div class="profile__element">Likes</div>
+		<div class="profile__element">Seguidores</div>
+		<div class="profile__element">Siguiendo</div>
 	</div>
 </section>
