--- a/public/stylus/elements/texts.styl
+++ b/public/stylus/elements/texts.styl
@@ -107,3 +107,14 @@
 
 // .high-text[data-color='white']
 // 	color white
+
+
+/*------------------------------------*
+	$ PROFILE TEXT
+*------------------------------------*/
+.profile-text
+	font-family 'Oswald'
+	font-size 1.5rem
+	color #585858
+	letter-spacing .5px
+	line-height 1em
