--- a/public/css/products.css
+++ b/public/css/products.css
@@ -167,6 +167,13 @@ input[type="submit"] {
 .high-text[data-color='light'] {
   color: #aaa;
 }
+.profile-text {
+  font-family: 'Oswald';
+  font-size: 1.5rem;
+  color: #585858;
+  letter-spacing: 0.5px;
+  line-height: 1em;
+}
 .thick-menu-container {
   display: block;
   font-weight: 600;
