--- a/public/stylus/profile.styl
+++ b/public/stylus/profile.styl
@@ -5,33 +5,33 @@
 
 @import 'elements/buttons.styl'
 
-// @import 'objects/header.styl'
 
 .profile
 	background #f6f6f6
-	&__info
+	overflow hidden
+	&__information
+		max-width max-width
+		margin 1.5rem auto
 		display flex
 		align-items center
-		max-width max-width
-		margin auto
-		padding 1.5rem 0
+	&__avatar
+		margin 0 1rem
+		width 5rem
+		img
+			border-radius 50%
+	&__data
+		.profile__info
+			margin-top .75rem
+			display flex
+			align-items center
+			.skinny-text
+				padding-right 1rem
 	&__elements
 		height 200px
 		background white
 		border-top solid 1px #ddd
-
-.profile
-	&__avatar
-		width 5rem
-		margin 0 1rem
-		img
-			border-radius 50%
-	&__info
-		display flex
-		align-items center
-		padding-top .75rem
-	&__city
-		padding-right 1rem
+	&__element
+		display none
 
 
 @media (min-width: tablet)
