remove middlewares for portfolio

--- a/app/views/partials/reset.html
+++ b/app/views/partials/reset.html
@@ -2,14 +2,14 @@
 	$ RESET
 ********************************************************************* -->
 <form class="reset">
-	<div class="reset-title">Reset Password</div>
+	<div class="reset-title">Cambiar contraseña</div>
 
-	<div class="reset-subtitle">Nuevo passwork para {{ userReset.username }}</div>
+	<div class="reset-subtitle">Contraseña nueva para {{ userReset.username }}</div>
 	<input class="input" data-size='large' name="password" type="password">
 
-	<div class="reset-subtitle">Confirmar password</div>
+	<div class="reset-subtitle">Confirmar contraseña</div>
 	<input class="input" data-size='large' name="repassword" type="password">
 	
 	<div class="loading"><i class="fa fa-spinner"></i></div>
-	<input class="button-solid" data-size='large' data-color='red' data-expand='true' value="Reset" type="submit">
+	<input class="button-solid" data-size='large' data-color='red' data-expand='true' value="Cambiar" type="submit">
 </form>
