--- a/app/views/user/product/edit.html
+++ b/app/views/user/product/edit.html
@@ -2,11 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Edit Product</title>
 </head>
 <body>
 
-likes : {{product.likes}}
-liked : {{product.liked}}
 </body>
 </html>
